2012-02-14  Kentaro Hara  <haraken@chromium.org>

        [Mac] PasteboardMac.mm build fails
        https://bugs.webkit.org/show_bug.cgi?id=78655

        Reviewed by Hajime Morita.

        Although the bots have been working fine, PasteboardMac.mm build fails
        in our local Mac environments due to an uninitialized variable:

            /Users/haraken/WebKit/Source/WebCore/platform/mac/PasteboardMac.mm:322: warning: 'string' may be used uninitialized in this function

        This patch initializes the 'string' to nil to fix the build failure.

        No tests. No change in behavior.

        * platform/mac/PasteboardMac.mm:
        (WebCore::Pasteboard::plainText):

2012-02-14  Kenichi Ishibashi  <bashi@chromium.org>

        [WebSocket] Add extension attribute support
        https://bugs.webkit.org/show_bug.cgi?id=78557

        Implement WebSocket "extensions" attribute that holds a list of
        extension the server accepted. No change in behavior at this time
        because we don't send any extension on handshake.

        Reviewed by Kent Tamura.

        No new tests. http/tests/websocket/tests/hybi/extensions.html checks the value of this attribute.

        * websockets/ThreadableWebSocketChannel.h: Add extensions().
        (ThreadableWebSocketChannel):
        * websockets/ThreadableWebSocketChannelClientWrapper.cpp:
        (WebCore::ThreadableWebSocketChannelClientWrapper::extensions): Added.
        (WebCore):
        (WebCore::ThreadableWebSocketChannelClientWrapper::setExtensions): Added.
        * websockets/ThreadableWebSocketChannelClientWrapper.h:
        (ThreadableWebSocketChannelClientWrapper):
        * websockets/WebSocket.cpp: Added m_extensions member variable.
        (WebCore::WebSocket::WebSocket):
        (WebCore::WebSocket::extensions): Returns m_extensions.
        * websockets/WebSocket.h:
        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::extensions): Added.
        (WebCore):